--- a/app/src/main/res/layout/item_popular_movie.xml
+++ b/app/src/main/res/layout/item_popular_movie.xml
@@ -35,20 +35,24 @@
 
         <TextView
             android:id="@+id/titleTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             android:text="Title: "
             android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/yearTextView"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/movieImageView"
             app:layout_constraintTop_toBottomOf="@+id/movieImageView" />
 
         <TextView
             android:id="@+id/overviewTextView"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="Overview: "
             android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/titleTextView" />
